--- a/Verslagen/2e verslag/template.tex
+++ b/Verslagen/2e verslag/template.tex
@@ -361,11 +361,11 @@ Database that stores information about which peripherals applications need in or
 
 
 \chapter{Resulting partial architecture}\label{sec:architecture}
-This section provides an overview of the architecture constructed through ADD\@.
+The diagram below provides an component-and-connector diagram of the (partial) architecture constructed through these first two runs of ADD\@.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[angle=90,width=0.8\textwidth]{result_arch.pdf}
+	\includegraphics[angle=90,width=0.75\textwidth]{result_arch.pdf}
 	%\missingfigure[figwidth=0.8\textwidth]{Component-and-connector diagram}
 	\caption{Component-and-connector diagram of the resulting partial architecture}.
 	\label{fig:result-arch}
